# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  22 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass:
  Add debug version of vmware/vmware-vmx to pax allow list.

  22 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> eclass/vmware.eclass,
  eclass/vmware-mod.eclass:
  Moved the creation of the vmware group from the product ebuilds to the
  modules ebuilds. Closing bug #188642.

  15 Aug 2007; Mike Auty <ikelos@gentoo.org>:
  Bump to any-any-113, fix for gcc-3.x.

  31 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-6.0.0.45731.ebuild:
  Typo fix.

  28 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Big re-sync with the main tree.
  Hopefully baselayout-2 rc's are still here, but not in the tree.
  Also added a minor fix for bug 178562.
  
  26 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Bumped any-any *again*, let's hope this one works.

  22 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Updated the any-any mirror location in vmware-mod.eclass.
  Also bumped to vmware-any-any-update111 which should cure compilation issues on post 2.6.21.

  18 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Redigested a lot of the overlay ebuilds, something funny digest-wise has been going on recently...

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-4.5.3-r1.e
  build:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-6.0.0.45731.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-server/vmware-server-1.0.3.44356.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-player/vmware-player-2.0.0.45731.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>