@@ -25,6 +25,10 @@ EBUILD vmware-modules-1.0.0.15-r1.ebuild 311 RMD160 910dd70caac0af5c1bdb6d714b96
 MD5 964d9f1e9e7d1a59b8b3a2819c2da791 vmware-modules-1.0.0.15-r1.ebuild 311
 RMD160 910dd70caac0af5c1bdb6d714b96f9c134cbdd8a vmware-modules-1.0.0.15-r1.ebuild 311
 SHA256 dbce7d028f4fe0f042323a7e05754e311366ac33feb7361dab63af70017683f7 vmware-modules-1.0.0.15-r1.ebuild 311
+EBUILD vmware-modules-1.0.0.16-r1.ebuild 309 RMD160 18358eb42d55a7772b53f3aef6cef979138dfad7 SHA1 5f9f18424fe210fe273bcd3a6dded6f193e282b5 SHA256 6f632a141db424f9e487bd36cf6e53b9a8c37f75b97dabfe8e6d8c257b8c9573
+MD5 2a83437e4e8f19fb27367f5445a1c815 vmware-modules-1.0.0.16-r1.ebuild 309
+RMD160 18358eb42d55a7772b53f3aef6cef979138dfad7 vmware-modules-1.0.0.16-r1.ebuild 309
+SHA256 6f632a141db424f9e487bd36cf6e53b9a8c37f75b97dabfe8e6d8c257b8c9573 vmware-modules-1.0.0.16-r1.ebuild 309
 EBUILD vmware-modules-1.0.0.16.ebuild 737 RMD160 cdea8d928dc89096f890c66ee1aa38dea2b9e70c SHA1 46499f8baa289e9f94995f5495718550294fa94e SHA256 23ad6db3e3431421cb70713ddc093caa0617581d29f1b740aa4eb033d5f9842c
 MD5 86cd830214fafbaa6e12a20a342a273a vmware-modules-1.0.0.16.ebuild 737
 RMD160 cdea8d928dc89096f890c66ee1aa38dea2b9e70c vmware-modules-1.0.0.16.ebuild 737
@@ -45,3 +49,6 @@ SHA256 8237bf1713f5b51a027a4b275f678357ba3176fd727f6dc554c40d7c2f035347 files/di
 MD5 77d279927e77641add07d90ee33912d7 files/digest-vmware-modules-1.0.0.16 602
 RMD160 4286ca49841b4d0dc6f74897375209179ad30176 files/digest-vmware-modules-1.0.0.16 602
 SHA256 e72f459e610b2780d1788a59be29c3c83865e4a52618ae3cddf85971b916c69a files/digest-vmware-modules-1.0.0.16 602
+MD5 4b537193601a6e6c57094fe3f93a6275 files/digest-vmware-modules-1.0.0.16-r1 274
+RMD160 be743bc729df43dbe1845aeef80bfe7ffb8eff13 files/digest-vmware-modules-1.0.0.16-r1 274
+SHA256 8237bf1713f5b51a027a4b275f678357ba3176fd727f6dc554c40d7c2f035347 files/digest-vmware-modules-1.0.0.16-r1 274
